tests/snapshots/main__parse_test_file_1.snap
---
source: tests/main.rs
assertion_line: 30
expression: test_fixture(fixture)
---
======
test 1
======

void

---

(source_file)

