tests/snapshots/main__parse_test_file_2.snap
---
source: tests/main.rs
assertion_line: 46
expression: test_fixture(fixture)
---
======
test 1
======

void

---

(source_file
  (function_declaration)
)

