tests/snapshots/main__parse_test_file_3.snap
---
source: tests/main.rs
assertion_line: 69
expression: test_fixture(fixture)
---
======
test 1
======

void MyFunc() {}

---

(source_file
  (function_declaration
    returnType: (type
      (builtin_type)
    )
    name: (symbol)
    arguments: (argument_declarations)
    body: (block)
  )
)

